Initial commit: Bitflow - Image dithering application

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitmap",
+  "name": "bitflow",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -40,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^2.2.19"
   }
 }
